--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/openai": "^0.0.54",
     "@deepgram/sdk": "^3.6.0",
+    "@supabase/supabase-js": "^2.50.2",
     "ai": "^3.3.20",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.6.0",
     "firebase": "^10.13.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
+    "mammoth": "^1.9.1",
     "next": "14.2.7",
+    "node-fetch": "^2.7.0",
+    "openai": "^5.7.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -25,12 +32,14 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
