Enhanced LangChain pipeline with improved metadata extraction and semantic chunking
- Added modular LangChain pipeline architecture (langchain-pipeline.ts, langchain-upload.ts)
- Enhanced metadata extraction with fuzzy author matching against canonical author list
- Improved client extraction to prioritize company names from document labels
- Added semantic chunking with configurable token overlap (25-token default)
- Fixed environment loading and error handling in extractMetadata.ts
- Updated upload.ps1 to use LangChain pipeline instead of bulk-upload.ts
- Added comprehensive documentation (AI_ASSISTANT_BRIEFING.md, LANGCHAIN_PIPELINE_README.md)
- Enhanced chunker.ts with better semantic splitting
- Updated API routes for better integration
- Added test files for pipeline validation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proposal_agent",
+  "name": "template-2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,6 +19,10 @@
     "firebase": "^10.13.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^11.3.31",
+    "langchain": "^0.3.0",
+    "@langchain/core": "^0.3.0",
+    "@langchain/openai": "^0.3.0",
+    "@langchain/community": "^0.3.0",
     "lucide-react": "^0.436.0",
     "mammoth": "^1.9.1",
     "next": "14.2.7",
